--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <application
         android:debuggable="true"
-        android:label="CamDemo">
+        android:label="@string/app_name">
         
         <activity
             android:name="m.cam.MainActivity"
